Apex Trigger Before insert & After insert Trigger

--- a/Salesforce_APEX/Triggers/TriggerHandler.cls
+++ b/Salesforce_APEX/Triggers/TriggerHandler.cls
@@ -24,3 +24,34 @@ Tirgger AccountTrigger on Account (before insert ){
         AccountTriggerHandler.PopulateRating(Trigger.New);
     }
 }
+
+//*******************"Customer Onboarding System"******************************/
+
+Trigger CustomerTrigger on Customer__c (before insert , after insert){
+    // BEFORE INSERT: Set defaults and validation ;
+    if (Trigger.isBefore && Trigger.isInsert){
+        for (Customer__c cust : Trigger.New){
+            if (cust.Status__c == null ){
+                cust.Status__c = 'New';
+            }
+            // validate email domain :
+            if (cust.Email__c != null && !cust.Email__c.endWith('@company.com')){
+                cust.addError('Email must be from @company.com domain.');
+            }
+        }
+    }
+    // AFTER INSERT :  creat welcome task + send welcom email :
+     if (Trigger.isAfter && Trigger.isInsert){
+        List<Welcom__task__c>  task = new List<Welcom__task__c>();
+
+        for (Customer__c cust : Trigger.New){
+            tasks.add(new Welcom__task__c(
+                Customer__c = cust.Id,
+                task_Description__c = 'Call customer and explain onboarding steps.' )
+            );
+            // Async welcom email: 
+            CustomerService.sendWelcomeEmailAsync(cust.Email__c);
+        }
+        insert tasks;
+     }
+}
