After Delete Trigger

--- a/Salesforce_APEX/Triggers/Before&After_Delete.cls
+++ b/Salesforce_APEX/Triggers/Before&After_Delete.cls
@@ -11,9 +11,58 @@ public class AccountTriggerHandler {
             }
         }
     }
+    public static void updateTotaleCountOnAccount (){
+
+    }
 }
 
 trigger AccountTrigger on Account (before delete) {
-    // No need to check isDelete since it's only defined on before delete
-    AccountTriggerHandler.preventDeletion(Trigger.old);
+    if (TriggerisDelete){
+        if (Trigger.isBefore){
+            AccountTriggerHandler.preventDeletion(Trigger.old);
+        }else if (Trigger.isAfter){
+            AccountTriggerHandler.
+        }
+    }
+}
+//***************************************************************** */
+//AFTER DELETE: when a contact record is deleted then update "Taotal Contact" field on related Account.
+public class ContactTriggerHandler {
+    public static void totalContactCount(List<Contact> conList){
+        List<Account> accList = new List<Account>();
+        Set<Id> accIds = new Set<Id>();
+
+        for (Contact con : conList){
+            if (AccountId != null){
+                accIds.add(con.AccountId);
+            }
+        }
+        for (Account acc : [SELECT Id, (SELECT Id FROM Contacts)
+                            FROM  Account WHERE Id IN: accIds]){
+                                acc.Total_Contact_Count__c = acc.Contacts.size();
+                                accList.add(acc);
+                            }
+    }
+
+}
+
+Trigger ContactTrigger on Contact (After insert , after delete, after undelete ){
+    if (Trigger.isInsert){
+        if(Trigger.isAfter){
+
+        }
+
+    }
+    if (Trigger.isDelete){
+        if (Trigger.isAfter){
+
+        }
+
+    }
+    if (Trigger.isUndelete){
+        if (Trigger.isAfter){
+
+        }
+
+    }
 }
