--- a/Salesforce_APEX/Apex REST API Integration/force-app/main/default/classes/Lv2_AuthenticationMethods.cls
+++ b/Salesforce_APEX/Apex REST API Integration/force-app/main/default/classes/Lv2_AuthenticationMethods.cls
@@ -1,1 +1,12 @@
-public class Lv2_AuthenticationMethods {\n\n}
+public class Lv2_AuthenticationMethods {
+    public static void callWithAPIKey(){
+        Http http = new Http();
+        HttpRequest req = HttpRequest();
+        req.setEndpoint('');
+        req.setMethod('GET');
+        req.setHeader('', '');
+
+        HttpResponse = res = http.send(req);
+        System.debug('Authenticated response: '+ res.getBody());
+    }
+}
