Resilient Lead Sync with External API

--- a/Salesforce_APEX/Apex REST API Integration/force-app/main/default/classes/Lv3.2_Resilient_Bulk_Contact_Sync_with_Logging.cls
+++ b/Salesforce_APEX/Apex REST API Integration/force-app/main/default/classes/Lv3.2_Resilient_Bulk_Contact_Sync_with_Logging.cls
@@ -148,3 +148,19 @@ global with sharing class ContactIntegrationService {
         }
     }
 }
+/* 
+[
+  {Sample JSON Input
+    "first_name": "John",
+    "last_name": "Smith",
+    "email_address": "john.smith@example.com",
+    "phone_number": "555-0123"
+  },
+  {
+    "first_name": "Mary",
+    "last_name": "",
+    "email_address": "mary.johnson@example.com",
+    "phone_number": "555-0124"
+  }
+]
+*/
