multiple REST API requests in a single call : Composite API

--- a/Salesforce_APEX/Apex REST API Integration/force-app/main/default/classes/Lv14_GraphQL_API.cls
+++ b/Salesforce_APEX/Apex REST API Integration/force-app/main/default/classes/Lv14_GraphQL_API.cls
@@ -71,3 +71,19 @@ public class lv14_GraphQL_API {
             System.debug('GraphQL Error: ' + e.getMessage());
         }
 }
+
+/*
+| Aspect                  | Details                                                                                                                                      |
+| ----------------------- | -------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Purpose**             | Enables clients to query Salesforce data flexibly by specifying exactly what data they need in a single request.                             |
+| **Key Feature**         | Single endpoint (`/services/data/vXX.X/graphql`) for all queries, unlike REST’s multiple endpoints.                                          |
+| **Data Fetching**       | Client defines the shape of the response (fields, nested objects) → reduces overfetching/underfetching.                                      |
+| **Query Language**      | Declarative syntax for describing required data and relationships between objects.                                                           |
+| **Operations**          | - **Query**: Read data.<br> - **Mutation**: Modify data.<br> - **Subscription** (not yet in Salesforce native GraphQL) for real-time events. |
+| **Benefits**            | - Fewer round trips to the server.<br>- Smaller payloads.<br>- Easier to aggregate related data in one call.                                 |
+| **Schema**              | Exposes types, fields, and relationships in a structured way. Salesforce generates schema from your org's metadata.                          |
+| **Usage**               | Send POST request with a GraphQL query in the body to the GraphQL endpoint.                                                                  |
+| **Integration Example** | Useful in Lightning Web Components, mobile apps, or external systems that need optimized data retrieval.                                     |
+| **Limitations**         | - Still in **Pilot/Beta** stages for some features.<br>- Governor limits apply.<br>- Not all Salesforce objects/fields may be exposed.       |
+
+*/
